# vajolet

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.in  Move.cpp  MoveList.h  ReadMe.md  TODO.txt  benchmark.cpp  benchmark.h  bitBoardIndex.h  bitBoardindex.h  bitops.cpp  bitops.h  book.cpp  book.h  build-rel.sh  build.sh  clean.bat  command.cpp  command.h  create-bmi2-build-clang.bat  create-bmi2-build.bat  create-nopopcnt-build.bat  create-popcnt-build.bat  create-release-builds.bat  data.cpp  data.h  eCastle.h  endgame.cpp  eval.cpp  eval.h  game.cpp  hashKey.h  hashKeys.cpp  hashKeys.h  history.h  history.txt  io.cpp  io.h  (+53 more)
NN/: evoluzione.txt  history.txt  nnue.par  readme.txt  simple.rs  train.rs
fann/: CMakeLists.txt
plantuml/: timeManagement SM.txt  vajolet class.txt
script/: calcComplexity.bat  clean.bat  clean.sh  create-bmi2-build-clang.bat  create-bmi2-build.bat  create-bmi2-build.sh  create-debug-build-clang.bat  create-debug-build.bat  create-nopopcnt-build-clang.bat  create-nopopcnt-build.bat  create-nopopcnt-build.sh  create-popcnt-build-clang.bat  create-popcnt-build.bat  create-popcnt-build.sh  create-release-builds.bat  create-release.builds.sh  requirements.txt  train.py
src/: CMakeLists.txt  benchmark.cpp  bitBoardIndex.h  bitops.cpp  bitops.h  book.cpp  command.cpp  command.h  data.h  eCastle.h  endgame.cpp  eval.cpp  game.cpp  game.h  hashKey.h  history.h  libchess.cpp  magicmoves.cpp  move.h  moveList.h  movegen.cpp  movegen.h  movepicker.cpp  movepicker.h  multiPVmanager.h  parameters.cpp  parameters.h  pawnTable.h  perft.cpp  perft.h  position.cpp  position.h  pvLine.h  pvLineFollower.h  rootMove.h  rootMovesToBeSearched.cpp  rootMovesToBeSearched.h  search.cpp  search.h  searchLogger.cpp  (+16 more)
src/book/: CMakeLists.txt  book.d  polyglotKey.cpp  polyglotKey.h
src/incbin/: CMakeLists.txt
src/misc/: CMakeLists.txt  bitops.d  bitops.h  data.cpp  vajo_io.cpp  vajo_io.h
src/movegen/: CMakeLists.txt  magicmoves.cpp  magicmoves.h  move.cpp  move.h  movegen.h  movepicker.cpp  movepicker.h
src/nnue/: CMakeLists.txt  nnue.cpp  nnue.h  nnue_type.h
src/nnue/activation/: CMakeLists.txt  activation.cpp  activation.h  linear.cpp  linear.h  relu.cpp  relu.h
src/nnue/cost/: CMakeLists.txt  cost.cpp  cost.h
src/nnue/input/: CMakeLists.txt  dense.cpp  dense.h  differentialList.cpp  differentialList.h  featureList.cpp  featureList.h  input.cpp  input.h  parallelSparse.cpp  parallelSparse.h  sparse.cpp  sparse.h
src/nnue/layer/: CMakeLists.txt  denseLayer.cpp  denseLayer.h  layer.cpp  layer.h  parallelDenseLayer.cpp  parallelDenseLayer.h
src/nnue/model/: CMakeLists.txt  model.cpp  model.h
src/nnue/trainSet/: CMakeLists.txt  diskInputSet.cpp  diskInputSet.h  diskInputSet2.cpp  diskInputSet2.h  inputSet.cpp  inputSet.h  labeledExample.cpp  labeledExample.h  memoryInputSet.cpp  memoryInputSet.h
src/position/: CMakeLists.txt  bitBoardIndex.h  endgame.cpp  eval.cpp  hashKey.cpp  hashKey.h  position.cpp  position.h  state.h
src/search/: CMakeLists.txt  multiPVmanager.h  rootMovesToBeSearched.h  score.h  search.cpp  search.h  searchData.cpp  searchData.h  searchImpl.h  searchLimits.h  searchLogger.cpp  searchLogger.h  searchTimer.h  searcher.cpp  searcher.h  see.cpp  thread.cpp  thread.h  timeManagement.cpp  timeManagement.h  transposition.cpp  transposition.h
src/syzygy/: CMakeLists.txt  LR.h  sparseEntry.h  syzygy.cpp  syzygy.h  tbCommonData.cpp  tbCommonData.h  tbchess.c  tbconfig.h  tbcore.h  tbfile.cpp  tbfile.h  tbpairs.cpp  tbpairs.h  tbprobe.cpp  tbprobe.h  tbtable.cpp  tbtable.h  tbtableDTZ.cpp  tbtableDTZ.h  tbtableWDL.cpp  tbtableWDL.h  tbtables.cpp  tbtables.h  tbtypes.h  tbvalidater.cpp  tbvalidater.h
src/syzygy2/: CMakeLists.txt  tbconfig.h  tbprobe.cpp  tbprobe.h
src/uci/: CMakeLists.txt  command.cpp  command.h  uciManagerImpl.h  uciOption.cpp  uciOption.h  uciOutput.cpp  uciOutput.h  uciParameters.cpp  uciParameters.h
src/utility/: CMakeLists.txt  benchmark.cpp  benchmark.d  benchmark.h  perft.cpp  perft.h
syzygy/: tbconfig.h  tbcore.c  tbcore.h  tbprobe.cpp
syzygy2/: tbprobe.cpp  tbprobe.h
test/: 8moves_GM_LB.pgn.7z  bt2630-vajolet 2.03.txt  bt2630-vajolet-0.79.rep  bt2630-vajolet-0.79.txt  bt2630-vajolet-0.84.txt  bt2630-vajolet-0.85.txt  bt2630-vajolet-1.08.txt  bt2630-vajolet-1.09.rep  bt2630-vajolet-1.22  bt2630-vajolet-2.48.txt  bt2630.epd  bt2630.txt  capture-0.77.sleepy  capture.sleepy  test.txt  testResult.xlsx  (+3 more)
tests/: CMakeLists.txt  MoveListTest.cpp  MoveTest.cpp  STS1-STS15_LAN_v3.epd  UciOutput-test.cpp  book-test.cpp  commandTest.cpp  dataTest.cpp  hashKeyTest.cpp  historyTest.cpp  main.cpp  multiPVmanagerTest.cpp  nnueTest.cpp  perft-test-long.cpp  perft-test-very-long.cpp  perft-test.cpp  positionTest.cpp  pvLineFollowerTest.cpp  pvLineTest.cpp  search-integration-test.cpp  searchTimer-test.cpp  see-test.cpp  sparseEntry-test.cpp  syzygy-test.cpp  tbfile-test.cpp  tbtable-test.cpp  tbvalidater-test.cpp  timeManagement-test.cpp  wac.cpp  wacnew.epd
tests/data/: open.txt
tests/syzygyTests/: CMakeLists.txt  LR-test.cpp  sparseEntry-test.cpp  syzygy-functional-test.cpp  tbCommonData-test.cpp  tbfile-test.cpp  tbpairs-test.cpp  tbtable-test.cpp  tbtables-test.cpp  tbvalidater-test.cpp
tuner/: CMakeLists.txt  FANNtrain.cpp  FANNtrain2.cpp  binSaver.cpp  binSaver.h  book.cpp  book.h  clock.cpp  clock.h  elo.cpp  elo.h  epdSaver.cpp  epdSaver.h  fenSaver.cpp  fenSaver.h  genFen.cpp  genTrainData.cpp  genTrainDataFeature.cpp  player.cpp  player.h  relabel.cpp  selfplay.cpp  selfplay.h  spsa.cpp  spsa.h  stats.cpp  tournament.cpp  tournament.h  tuner.cpp  tunerPars.cpp  tunerPars.h  txtSaver.cpp  txtSaver.h  verifyTrainDataFeature.cpp
tuner/pgnlib-0.2.5/: CMakeLists.txt  PGNCommentText.cpp  PGNCommentText.h  PGNGame.cpp  PGNGame.h  PGNGameCollection.cpp  PGNGameCollection.h  PGNGameResult.h  PGNMove.cpp  PGNMove.h  PGNMoveList.cpp  PGNMoveList.h  PGNParser.cpp  PGNPiece.h  PGNPly.cpp  PGNPly.h  PGNPosition.cpp  PGNPosition.h  PGNSquare.cpp  PGNSquare.h  PGNTag.cpp  PGNTag.h  PGNTagList.cpp  PGNTagList.h
(+27 files in other folders)
